[package]
name = "rinko-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rinko-backend"
path = "src/main.rs"

[dependencies]
# Workspace shared dependencies
rinko-common = { path = "../rinko-common" }

anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender ={ workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
scraper = "0.25.0"
strsim = "0.11.1"
csv = "1.3"
resvg = "0.47.0"
usvg = "0.47.0"
tiny-skia = "0.12.0"
fontdb = "0.23.0"
headless_chrome = { version = "1.0.21", features = ["fetch"] }
